--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cli": "^1.0.1",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
