--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/preset-typescript": "^7.18.6",
     "cli": "^1.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1"
