--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
-{ 
+{
     "compilerOptions": {
-        "target": "ES6",
+        "target": "ESNext",
         "module": "es6",
-        "strict": true,
-    }
+        "strict": true, 
+        "noEmit": true,
+        "isolatedModules": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+    },
+    "include": ["./src/**/*"]
 }
