--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run type-check && webpack --mode production",
+    "start": "webpack-dev-server -open --mode development",
+    "type-check": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "babel-loader": "^9.1.0",
     "cli": "^1.0.1",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.4.1",
