Add React.FC Type

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wp-react-ts-webpack",
-  "homepage": ".",
+  "homepage": "spy.robertocannella.com",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
